--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,12 @@
 extends layout
 
+block links
+  link(href='http://fonts.googleapis.com/css?family=Syncopate:700', rel='stylesheet', type='text/css')
+  link(href='/css/index.css', rel='stylesheet', type='text/css')
+
 block body
-  h1 It works!
+  header GJ
+  .upload.button
+    p Upload
+  .request.button
+    p Request
