--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,19 @@ block links
   link(href='http://fonts.googleapis.com/css?family=Syncopate:700', rel='stylesheet', type='text/css')
   link(href='/css/index.css', rel='stylesheet', type='text/css')
 
+block scripts
+  script(src='//cdnjs.cloudflare.com/ajax/libs/vue/0.10.5/vue.min.js', type='text/javascript')
+  script(src='//rawgit.com/flatiron/director/master/build/director.js', type='text/javascript')
+
 block body
   header GJ
-  .upload.button
-    p Upload
-  .request.button
-    p Request
+  .buttons
+    .current(v-view='current', v-ref='view')
+
+  script(id='top', type='x-template')
+    .upload.button
+      p Upload
+    .request.button
+      p Request
+
+  script(src='/js/index.js', type='text/javascript')
