add upload page

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -15,9 +15,11 @@ header
   color #f8f8f8
   line-height 66px
 
-.upload.button, .request.button
+.upload.button, .request.button, .url.button, .send.button
   height 40%
   color #262626
+  display block
+  text-decoration none
 
   p
     margin 0
@@ -32,8 +34,19 @@ header
     transform translateY(-50%)
     font-size 32px
 
+  textarea
+    margin 0
+    padding 0
+    width 100%
+    height 100%
+    font-size 52px
+    border 0
+
 .upload.button
   background-color #5AA4DF
 
 .request.button
   background-color #B8DFFF
+
+.send.button
+  background-color #FCE1B8
