avalable upload gif(url)

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -7,6 +7,9 @@ body
   margin 0
   font-family 'Syncopate', sans-serif
 
+a
+  text-decoration none
+
 header
   background-color #FA9800
   height 60px
@@ -19,7 +22,6 @@ header
   height 40%
   color #262626
   display block
-  text-decoration none
 
   p
     margin 0
