add jockey select page

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -18,7 +18,7 @@ header
   color #f8f8f8
   line-height 66px
 
-.upload.button, .request.button, .url.button, .send.button
+.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button
   height 40%
   color #262626
   display block
@@ -51,4 +51,10 @@ header
   background-color #B8DFFF
 
 .send.button
+  background-color #FCE1B8
+
+.gif.button
+  background-color #FC76B8
+
+.bpm.button
   background-color #FCE1B8
