--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -65,3 +65,14 @@ header
 
   img
     width 100%
+
+.bpm
+  width 100%
+  height 100%
+  text-align center
+  padding-top 20%
+  font-size 82px
+  color #f8f8f8
+
+  p
+    font-size 28px
