--- a/views/screen.jade
+++ b/views/screen.jade
@@ -14,5 +14,5 @@ block body
 
   script(id='gifs', type='x-template')
     .gif(v-repeat='urls')
-      x-gif(src='/gifs/retrieve?url={{$value}}')
+      x-gif(src='/gifs/retrieve?url={{$value}}', bpm='{{bpm}}')
   script(src='/js/screen.js', type='text/javascript')
