--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -76,3 +76,10 @@ header
 
   p
     font-size 28px
+
+.more
+  height 10%
+  background-color #FC76B8
+  font-size 28px
+  text-align center
+  padding-top 3%
