--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,7 @@ block body
   script(id='select', type='x-template')
     .preview(v-repeat='urls')
       img(src='{{$value}}', v-on='click: choose(this)')
+    .more(v-on='click: more(this)') more
 
   script(id='bpm', type='x-template')
     .bpm(v-on='click: measure(this)') {{bpm}}
