--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ block body
     .url.button
       textarea(placeholder='http://...', v-model='url', autofocus)
     .send.button(v-on='click: send(this)')
-      p Send
+      p {{status}}
 
   script(id='jockey', type='x-template')
     a.gif.button(href='#select')
@@ -38,7 +38,7 @@ block body
   script(id='select', type='x-template')
     .preview(v-repeat='urls')
       img(src='{{$value}}', v-on='click: choose(this)')
-    .more(v-on='click: more(this)') more
+    .more(v-on='click: more(this)', v-show='showMore') more
 
   script(id='bpm', type='x-template')
     .bpm(v-on='click: measure(this)') {{bpm}}
