--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -66,6 +66,25 @@ header
   img
     width 100%
 
+.choose
+  margin-bottom -30px
+  background-color #000
+
+  &:before
+    display block
+    content '✔'
+    font-size 96px
+    color #FFF
+    position relative
+    top 30px
+    line-height 30px
+    z-index 1
+
+  img
+    position relative
+    top -30px
+    opacity 0.4
+
 .bpm.field
   width 100%
   height 100%
