--- a/public/css/screen.styl
+++ b/public/css/screen.styl
@@ -12,3 +12,21 @@ x-gif
   top 0
   width 100%
   height 100%
+
+.container, .commentContainer
+  position absolute
+  margin 0
+  padding 0
+  top 0
+  left 0
+  width 100%
+  height 100%
+
+  .comment
+    position absolute
+    left 100%
+    white-space nowrap
+    font-size 48px
+    color #FFF
+    z-index 10
+    text-shadow 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000
