--- a/public/css/screen.styl
+++ b/public/css/screen.styl
@@ -30,3 +30,19 @@ x-gif
     color #FFF
     z-index 10
     text-shadow 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000
+
+.name
+  position absolute
+  top 0
+  left 0
+  width 100%
+  height 100%
+
+  p
+    position relative
+    top 50%
+    -webkit-transform translateY(-50%)
+    color #FFF
+    font-size 160px
+    text-align center
+    margin 0
