--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -20,7 +20,7 @@ header
   color #f8f8f8
   line-height 66px
 
-.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button, .comment.button, .commentBody.button
+.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button, .comment.button, .commentBody.button, .usage.button
   height 40%
   color #262626
   display block
@@ -45,6 +45,10 @@ header
     height 100%
     font-size 32px
     border 0
+
+.usage.button
+  background-color #FA9800
+  height 10%
 
 .upload.button
   background-color #5AA4DF
