--- a/views/index.jade
+++ b/views/index.jade
@@ -24,6 +24,8 @@ block body
       p Jockey
     a.comment.button(href='#comment')
       p Comment
+    a.usage.button(href='/usage')
+      p 使い方
 
   script(id='upload', type='x-template')
     .url.button
