--- a/public/css/screen.styl
+++ b/public/css/screen.styl
@@ -46,3 +46,4 @@ x-gif
     font-size 160px
     text-align center
     margin 0
+    text-shadow 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000
