Manual BPM page

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -20,7 +20,7 @@ header
   color #f8f8f8
   line-height 66px
 
-.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button, .comment.button, .commentBody.button, .usage.button
+.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button, .comment.button, .commentBody.button, .usage.button, .bpmManual.button
   height 40%
   color #262626
   display block
@@ -38,13 +38,14 @@ header
     transform translateY(-50%)
     font-size 32px
 
-  textarea
+  textarea, input
     margin 0
     padding 0
     width 100%
     height 100%
     font-size 32px
     border 0
+
 
 .usage.button
   background-color #FA9800
@@ -96,7 +97,7 @@ header
 
 .bpm.field
   width 100%
-  height 100%
+  height 300px
   text-align center
   padding-top 20%
   font-size 82px
