--- a/views/screen.jade
+++ b/views/screen.jade
@@ -16,7 +16,7 @@ block body
 
   script(id='gifs', type='x-template')
     .gif(v-repeat='urls')
-      x-gif(src='/gifs/retrieve?url={{$value}}', bpm='{{bpm}}')
+      x-gif(src='/gifs/retrieve/{{$value}}', bpm='{{bpm}}')
     .name
       p {{name}}
   script(src='/js/screen.js', type='text/javascript')
