remove comment feature

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -20,7 +20,7 @@ header
   color #f8f8f8
   line-height 66px
 
-.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button, .comment.button, .commentBody.button, .usage.button, .bpmManual.button
+.upload.button, .request.button, .url.button, .send.button, .gif.button, .bpm.button, .usage.button, .bpmManual.button
   height 40%
   color #262626
   display block
@@ -56,9 +56,6 @@ header
 
 .request.button
   background-color #B8DFFF
-
-.comment.button
-  background-color #f4baff
 
 .send.button
   background-color #FCE1B8
