--- a/views/screen.jade
+++ b/views/screen.jade
@@ -9,6 +9,7 @@ block scripts
   script(src='//code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
   script(src='//cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js', type='text/javascript')
   script(src='/socket.io/socket.io.js', type='text/javascript')
+  script(src='/js/webmidi-test/script.js', type='text/javascript')
 
 block body
   .container
