--- a/views/index.jade
+++ b/views/index.jade
@@ -5,55 +5,14 @@ block links
   link(href='/css/index.css', rel='stylesheet', type='text/css')
 
 block scripts
-  script(src='//cdnjs.cloudflare.com/ajax/libs/vue/0.10.5/vue.min.js', type='text/javascript')
   script(src='//rawgit.com/flatiron/director/master/build/director.js', type='text/javascript')
   script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js', type='text/javascript')
   script(src='//code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
   script(src='/socket.io/socket.io.js', type='text/javascript')
 
 block body
-  a(href='#top')
+  a(href='#Top')
     header GJ
   .buttons
-    .current(v-view='current', v-ref='view')
-
-  script(id='top', type='x-template')
-    a.upload.button(href='#upload')
-      p Upload
-    a.request.button(href='#jockey')
-      p Jockey
-    a.usage.button(href='/usage')
-      p 使い方
-
-  script(id='upload', type='x-template')
-    .url.button
-      textarea(v-model='url', v-attr='placeholder: placeholder', autofocus)
-    .send.button(v-on='click: send(this)')
-      p {{status}}
-
-  script(id='jockey', type='x-template')
-    a.gif.button(href='#select')
-      p Select GIF
-    a.bpm.button(href='#bpm')
-      p BPM sync
-
-  script(id='select', type='x-template')
-    .preview(v-repeat='urls')
-      img(src='{{$value}}', v-on='click: choose(this)')
-    .more(v-on='click: more(this)', v-show='showMore') more
-
-  script(id='bpm', type='x-template')
-    .bpm.field(v-on='click: measure(this)') {{bpm}}
-      p (tap here)
-    a.bpmManual.button(href='#bpm-manual')
-      p set manually
-
-
-  script(id='bpm-manual', type='x-template')
-    .bpmManual.button
-      p
-        input(placeholder='230(bpm)', v-model='bpm', autofocus, inputmode='numeric')
-    .send.button(v-on='click: send(this)')
-      p {{status}}
 
   script(src='/js/index.js', type='text/javascript')
