--- a/views/usage.jade
+++ b/views/usage.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block links
-  link(href='/css/usage.css', rel='stylesheet', type='text/css')
+  link(href='/usage.css', rel='stylesheet', type='text/css')
 
 block body
   header 使い方
