--- a/views/screen.jade
+++ b/views/screen.jade
@@ -2,7 +2,7 @@ extends layout
 
 block links
   link(href='//rawgit.com/e-jigsaw/x-gif/size-max/dist/x-gif.html', rel='import')
-  link(href='/css/screen.css', rel='stylesheet', type='text/css')
+  link(href='/screen.css', rel='stylesheet', type='text/css')
 
 block scripts
   script(src='//cdnjs.cloudflare.com/ajax/libs/vue/0.10.5/vue.min.js', type='text/javascript')
@@ -19,4 +19,4 @@ block body
       x-gif(src='{{$value}}', bpm='{{bpm}}')
     .name
       p {{name}}
-  script(src='/js/screen.js', type='text/javascript')
+  script(src='/screen.js', type='text/javascript')
