--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,15 @@
 extends layout
 
 block links
-  link(href='http://fonts.googleapis.com/css?family=Syncopate:700', rel='stylesheet', type='text/css')
+  link(href='https://fonts.googleapis.com/css?family=Syncopate:700', rel='stylesheet', type='text/css')
   link(href='/index.css', rel='stylesheet', type='text/css')
 
 block scripts
-  script(src='//cdnjs.cloudflare.com/ajax/libs/vue/0.10.5/vue.min.js', type='text/javascript')
-  script(src='//rawgit.com/flatiron/director/master/build/director.js', type='text/javascript')
-  script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js', type='text/javascript')
-  script(src='//code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
-  script(src='/socket.io/socket.io.js', type='text/javascript')
+  script(src='/vue.min.js', type='text/javascript')
+  script(src='/director.js', type='text/javascript')
+  script(src='/lodash.min.js', type='text/javascript')
+  script(src='/jquery.min.js', type='text/javascript')
+  script(src='/socket.io.js', type='text/javascript')
 
 block body
   a(href='#top')
