--- a/views/screen.jade
+++ b/views/screen.jade
@@ -1,14 +1,14 @@
 extends layout
 
 block links
-  link(href='//rawgit.com/e-jigsaw/x-gif/size-max/dist/x-gif.html', rel='import')
+  link(href='/x-gif.html', rel='import')
   link(href='/screen.css', rel='stylesheet', type='text/css')
 
 block scripts
-  script(src='//cdnjs.cloudflare.com/ajax/libs/vue/0.10.5/vue.min.js', type='text/javascript')
-  script(src='//code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
-  script(src='//cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js', type='text/javascript')
-  script(src='/socket.io/socket.io.js', type='text/javascript')
+  script(src='/vue.min.js', type='text/javascript')
+  script(src='/jquery.min.js', type='text/javascript')
+  script(src='/jquery.transit.min.js', type='text/javascript')
+  script(src='/socket.io.js', type='text/javascript')
 
 block body
   .container
