--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block scripts
   script(src='/director.js', type='text/javascript')
   script(src='/lodash.min.js', type='text/javascript')
   script(src='/jquery.min.js', type='text/javascript')
-  script(src='/socket.io.js', type='text/javascript')
+  script(src='/socket.io/socket.io.js', type='text/javascript')
 
 block body
   a(href='#top')
