--- a/views/screen.jade
+++ b/views/screen.jade
@@ -8,7 +8,7 @@ block scripts
   script(src='/vue.min.js', type='text/javascript')
   script(src='/jquery.min.js', type='text/javascript')
   script(src='/jquery.transit.min.js', type='text/javascript')
-  script(src='/socket.io.js', type='text/javascript')
+  script(src='/socket.io/socket.io.js', type='text/javascript')
 
 block body
   .container
